@@ -24,5 +24,6 @@ Currently included:
 * [[template]]
 * [[toc]]
 * [[toggle]]
+* [[repolist]]
 
 New plugins will be added to this bundle from time to time.
